# thermoMPNN_fp

./: .gitignore  README.md  pyproject.toml
configs/: local_paths.yaml  train_default.yaml
src/thermompnn_fp/: __init__.py  attention.py  cli.py  config.py  datasets.py  featurize.py  head.py  inference.py  metrics.py  pipeline.py  preprocessing.py  protein_mpnn_utils.py  proteinmpnn_backbone.py  splits.py  training.py  types.py
tests/: test_core_shapes.py
