#:schema https://json.schemastore.org/pyproject.json
[project]
name = "thermompnn-fp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nazelto.WSL", email = "1500465005@qq.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "torch",
    "transformers>=4.37.0",
]

[project.scripts]
thermompnn-fp = "thermompnn_fp:main"

[build-system]
requires = ["uv_build>=0.9.29,<0.10.0"]
build-backend = "uv_build"
